--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@ body{background:DarkOrange  ;}
 <img src="https://cdn.pixabay.com/photo/2016/03/05/20/17/america-1238742__340.jpg" width= "250" height="200"> 
 
 <img src="https://cdn.pixabay.com/photo/2015/11/03/15/42/milkshake-1021027_960_720.jpg" width="275" height="200">
-</body>
+
+<img src=" https://cdn.pixabay.com/photo/2015/03/26/09/39/fried-chicken-690039_960_720.jpg"  width="275" height="200">
+
+<img src="  https://cdn.pixabay.com/photo/2015/06/21/15/30/strawberries-816698__340.jpg "width="275" height="200">
+
+<img src="https://cdn.pixabay.com/photo/2014/01/24/04/05/fried-chicken-250863__340.jpg"width="275" height="200">
+        
+<img src="https://cdn.pixabay.com/photo/2015/09/05/01/05/french-fries-923687__340.jpg"width="275" height="200">
+
+<img src="https://cdn.pixabay.com/photo/2015/09/06/01/10/hamburger-926885__340.jpg"width="275" height="200">
+
+<img src="https://cdn.pixabay.com/photo/2014/01/30/22/38/dodgers-255177__340.jpg"width="275" height="200">
+
+<img src=""width="275" height="200">
+ </body>
   
 </html>
