--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body{background:DarkOrange  ;}
 
 <img src="https://cdn.pixabay.com/photo/2014/01/30/22/38/dodgers-255177__340.jpg"width="275" height="200">
 
-
+<imgsrc="https://image.shutterstock.com/display_pic_with_logo/612688/593995979/stock-photo-baked-chicken-wings-with-sesame-and-sauce-food-background-with-copy-space-top-view-593995979.jpg"width="275" height="200">
  </body>
   
 </html>
