--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 h1{color:Black ;}
 table{font-size:20px;}
 thead{color:Black ;}  
-body{background:DarkOrange  ;}
+body{background:clear;}
 
     
     
