--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <style>
 h1{color:Black ;}
 table{font-size:20px;}
-thead{color:orange;}  
-
+thead{color:Black;}  
+body{background:Orange;}
 
     
     
