--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <li><a href="beerandwine.html">Beer and Wine</a></li>
     <li><a href="fordogs.html">For Dogs</a></li>
     <li><a href="breakfast.html">Breakfast</a></li>
-
+    <li><a href="wordguessgame.html">Word Guess Game</a></li>
 </ul>
 
 
