--- a/dessert.html
+++ b/dessert.html
@@ -44,14 +44,15 @@
     <li><a href="chicken.html">Chicken</a></li>
     <li><a href="flat-top%20dogs.html">Flat-Top Dogs</a></li>
     <li><a href="fries.html">Fries</a></li>
-    <li><a href="fries.html">Frozen Custard</a></li>
+    <li><a href="frozencustard.html">Frozen Custard</a></li>
     <li><a href="dessert.html">Dessert</a></li>
     <li><a href="drinks.html">Drinks</a></li>
     <li><a href="beerandwine.html">Beer and Wine</a></li>
     <li><a href="fordogs.html">For Dogs</a></li>
     <li><a href="breakfast.html">Breakfast</a></li>
-
+    <li><a href="wordguessgame.html">Word Guess Game</a></li>
 </ul>
+
 
 
 
