--- a/Hat.html
+++ b/Hat.html
@@ -56,6 +56,7 @@
     <li><a href="Tee-Shirts.html">Button-Ups</a></li>
     <li><a href="Long-Tees.html">Long-Tees</a></li>
     <li><a href="Sweater.html">Sweater</a></li>
+    <li><a href="GucciQuiz.html">Gucci Quiz</a></li>
 
 </ul>
 <h1>Hats</h1>
@@ -65,27 +66,27 @@
 
 
 <div class="hats1">
-<img src="https://c1.staticflickr.com/6/5293/5564191397_ca8ee25e9a_b.jpg"width="195" height="270">
-<span> Captains Hat </span><br>
-<p5>$56.99</p5>
+<img src="https://media.gucci.com/style/DarkGray_South_0_160_316x316/1521055807/426887_4HB10_2160_001_100_0000_Light-Kingsnake-print-GG-Supreme-baseball-hat.jpg"width="195" height="270">
+<span> Red Gucci Snake </span><br>
+<p5>$156.99</p5>
 </div>
 
 <div class="hats2">
-<img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Hat_worn_by_Congressman_Ford.JPG"width="195" height="270">
-<span> Gray Black Bow-Tie </span><br>
-<p5>$26.99</p5>
+<img src="https://media.gucci.com/style/DarkGray_Center_0_0_800x800/1488912304/426887_4HB98_1060_002_100_0000_Light-GG-Supreme-baseball-hat-with-Angry-Cat.jpg"width="195" height="270">
+<span> Gray Gucci Cats </span><br>
+<p5>$126.99</p5>
 </div>
 
 <div class="hats3">
-<img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Bowler_hat%2C_Vienna%2C_mid-20th_century.jpg"width="195" height="270">
-<span> Black Top-Hat </span><br>
-<p5>$19.99</p5>
+<img src="https://www.jolicloset.com/imgr/full/2017/05/39584-1/gucci-brown-cotton-hat-beanie.jpg"width="195" height="270">
+<span> Gucci Bucket Hat </span><br>
+<p5>$119.99</p5>
 </div>
 
 <div class="hats4">
-<img src="https://upload.wikimedia.org/wikipedia/commons/4/42/Hat%2C_boater_%28AM_1968.105-2%29.jpg"width="195" height="270">
-<span> Sunny Day </span><br>
-<p5>$24.99</p5>
+<img src="https://cdn-images.farfetch-contents.com/12/57/59/09/12575909_12000663_322.jpg"width="195" height="270">
+<span> Pink Gucci Dog </span><br>
+<p5>$124.99</p5>
 </div>
 
 </body>
