--- a/Sweater.html
+++ b/Sweater.html
@@ -59,6 +59,7 @@
     <li><a href="Tee-Shirts.html">Button-Ups</a></li>
     <li><a href="Long-Tees.html">Long-Tees</a></li>
     <li><a href="Sweater.html">Sweater</a></li>
+    <li><a href="https://cyberexternalpatches--five-nine.repl.co/">Gucci Quiz</a></li>
 
 </ul>
 <h1>Sweaters</h1>
@@ -69,27 +70,27 @@
 
 
 <div class="sw1">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/Selburose-sweater.jpg"width="195" height="270">
-    <span> Tis The Season </span><br>
-    <p5>$54.99</p5>
+    <img src="https://media.gucci.com/style/DarkGray_Center_0_0_800x800/1519758907/429953_X1300_4467_001_100_0000_Light-Kingsnake-jacquard-wool-sweater.jpg"width="195" height="270">
+    <span> Gucci Snake</span><br>
+    <p5>$254.99</p5>
 </div>
 
 <div class="sw2">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Jersei-coll-alt.jpg"width="195" height="270">
-    <span> Ugly Grey </span><br>
-    <p5>$24.99</p5>
+    <img src="https://cdn.kleding.nl/L459194145/gucci-guccy-knit-top.jpg"width="195" height="270">
+    <span> Golden Guccy </span><br>
+    <p5>$324.99</p5>
 </div>
 
 <div class="sw3">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/%22WIN%22_patterned_sweater.JPG"width="195" height="270">
-    <span> America  </span><br>
-    <p5>$48.82</p5>
+    <img src="https://media.gucci.com/style/DarkGray_South_0_160_316x316/1519800317/474693_X5T50_4956_001_100_0000_Light-Wool-sweater-with-tiger-intarsia.jpg"width="195" height="270">
+    <span> Gucci Tiger </span><br>
+    <p5>$248.82</p5>
 </div>
 
 <div class="sw4">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPATpoeHSEnOnIsxcFdXc67NwaYgyQLsKFRXFM9Ey3xLhl6ussCw"width="195" height="270">
-    <span> Old Days </span><br>
-    <p5>$64.99</p5>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgHd0csNevqK6pd7UwspVC3ByGmi_UobP4vfo_iHD9Wtqzo-FP"width="195" height="270">
+    <span>Gucci Double Wolf</span><br>
+    <p5>$264.99</p5>
 </div>
 
 
