--- a/Tee-Shirts.html
+++ b/Tee-Shirts.html
@@ -55,6 +55,7 @@
     <li><a href="Tee-Shirts.html">Button-Ups</a></li>
     <li><a href="Long-Tees.html">Long-Tees</a></li>
     <li><a href="Sweater.html">Sweater</a></li>
+    <li><a href="GucciQuiz.html">Gucci Quiz</a></li>
 
 </ul>
 <h1>Button-Ups</h1>
@@ -64,25 +65,25 @@
 <br>
 
 <div class="shirt1">
-<img src="https://thumb7.shutterstock.com/thumb_large/664216/664216,1294024051,11/stock-photo-close-up-blue-shirts-68153806.jpg" width="195" height="270">
+<img src="https://media.gucci.com/style/DarkGray_South_0_160_316x316/1519932606/493762_Z366F_4971_001_100_0000_Light-Cotton-Duke-shirt-with-embroidery.jpg" width="200" height="300">
 
     <span> Light Blue Button-Up</span><br>
-<p5>$56.99</p5>
+<p5>$96.99</p5>
 </div>
 
 <div class="shirt2">
-    <img src="https://cdn.pixabay.com/photo/2017/11/14/06/18/shirt-2947549__340.jpg"width="195" height="270">
+    <img src="https://media.gucci.com/style/DarkGray_South_0_160_316x316/1519920007/519509_Z631E_9233_001_100_0000_Light-Gucci-stamp-bowling-shirt.jpg"width="200" height="300">
 
-    <span> Dark Blue Button-Up</span><br>
-<p5>$56.99</p5>
+    <span> Light Brown Button-Up</span><br>
+<p5>$96.99</p5>
 </div>
 
 
 <div class="shirt3">
-    <img src="https://thumb7.shutterstock.com/thumb_large/793600/249913525/stock-photo-man-shirt-buttons-249913525.jpg"width="195" height="270">
+    <img src="https://images.neimanmarcus.com/ca/1/product_assets/K/0/P/D/J/NMK0PDJ_mu.jpg"width="200" height="300">
 
     <span> White Button-Up </span><br>
-<p5>$56.99</p5>
+<p5>$116.99</p5>
 </div>
 
 </body>
