--- a/AboutsUs.html
+++ b/AboutsUs.html
@@ -49,6 +49,7 @@
     <li><a href="Tee-Shirts.html">Button-Ups</a></li>
     <li><a href="Long-Tees.html">Long-Tees</a></li>
     <li><a href="Sweater.html">Sweater</a></li>
+    <li><a href="GucciQuiz.html">Gucci Quiz</a></li>
 
 </ul>
 <h1>About</h1>
