--- a/Sweater.html
+++ b/Sweater.html
@@ -51,7 +51,7 @@
 
 <body>
 
-<ul>
+<ul class="nav">
 
     <li><a href="clothing.html">Home</a></li>
     <li><a href="AboutsUs.html">About Us</a></li>
@@ -59,7 +59,7 @@
     <li><a href="Tee-Shirts.html">Button-Ups</a></li>
     <li><a href="Long-Tees.html">Long-Tees</a></li>
     <li><a href="Sweater.html">Sweater</a></li>
-    <li><a href="https://cyberexternalpatches--five-nine.repl.co/">Gucci Quiz</a></li>
+    <li><a href="GucciQuiz.html">Gucci Quiz</a></li>
 
 </ul>
 <h1>Sweaters</h1>
