--- a/clothing.html
+++ b/clothing.html
@@ -43,7 +43,7 @@
 
 
 
-<ul>
+<ul class="nav">
 
     <li><a href="clothing.html">Home</a></li>
     <li><a href="AboutsUs.html">About Us</a></li>
@@ -51,7 +51,8 @@
     <li><a href="Tee-Shirts.html">Button-Ups</a></li>
     <li><a href="Long-Tees.html">Long-Tees</a></li>
     <li><a href="Sweater.html">Sweater</a></li>
-    <li><a href="clothing.html">Locations</a></li>
+    <li><a href="GucciQuiz.html">Gucci Quiz</a></li>
+
 </ul>
 <h1>New: Gucci X Fiat Cars</h1>
 <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Gucci_500_2.jpg" width="332" height="249">
