--- a/AboutsUs.html
+++ b/AboutsUs.html
@@ -41,7 +41,7 @@
 
 <body>
 
-<ul>
+<ul class="nav">
 
     <li><a href="clothing.html">Home</a></li>
     <li><a href="AboutsUs.html">About Us</a></li>
