--- a/Hat.html
+++ b/Hat.html
@@ -48,7 +48,7 @@
 
 <body>
 
-<ul>
+<ul class="nav">
 
     <li><a href="clothing.html">Home</a></li>
     <li><a href="AboutsUs.html">About Us</a></li>
