--- a/Tee-Shirts.html
+++ b/Tee-Shirts.html
@@ -47,7 +47,7 @@
 
 <body>
 
-<ul>
+<ul class="nav">
 
     <li><a href="clothing.html">Home</a></li>
     <li><a href="AboutsUs.html">About Us</a></li>
