--- a/clothing.html
+++ b/clothing.html
@@ -51,7 +51,7 @@
     <li><a href="Tee-Shirts.html">Button-Ups</a></li>
     <li><a href="Long-Tees.html">Long-Tees</a></li>
     <li><a href="Sweater.html">Sweater</a></li>
-    <li><a href="GucciQuiz.html">Gucci Quiz</a></li>
+    <li><a href="https://CyberExternalPatches--mazin40west.repl.co">Gucci Quiz</a></li>
 
 </ul>
 <h1>New: Gucci X Fiat Cars</h1>
